kubernetes/platform/config/monitoring/alertmanager-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Alertmanager"
    gethomepage.dev/group: "Platform"
    gethomepage.dev/icon: "alertmanager.svg"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "alertmanager.${internal_domain}"
  rules:
    - backendRefs:
        - name: alertmanager-operated
          port: 9093
